tests/ui/higher-ranked/trait-bounds/normalize-under-binder/issue-71955.stderr
error: implementation of `FnOnce` is not general enough
  --> $DIR/issue-71955.rs:45:5
   |
LL |     foo(bar, "string", |s| s.len() == 5);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ implementation of `FnOnce` is not general enough
   |
   = note: closure with signature `for<'a> fn(&'a &'0 str) -> bool` must implement `FnOnce<(&&'1 str,)>`, for any two lifetimes `'0` and `'1`...
   = note: ...but it actually implements `FnOnce<(&&str,)>`

error: implementation of `FnOnce` is not general enough
  --> $DIR/issue-71955.rs:45:5
   |
LL |     foo(bar, "string", |s| s.len() == 5);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ implementation of `FnOnce` is not general enough
   |
   = note: closure with signature `for<'a> fn(&'a &'0 str) -> bool` must implement `FnOnce<(&&'1 str,)>`, for any two lifetimes `'0` and `'1`...
   = note: ...but it actually implements `FnOnce<(&&str,)>`
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: implementation of `FnOnce` is not general enough
  --> $DIR/issue-71955.rs:48:5
   |
LL |     foo(baz, "string", |s| s.0.len() == 5);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ implementation of `FnOnce` is not general enough
   |
   = note: closure with signature `for<'a> fn(&'a Wrapper<'0>) -> bool` must implement `FnOnce<(&Wrapper<'1>,)>`, for any two lifetimes `'0` and `'1`...
   = note: ...but it actually implements `FnOnce<(&Wrapper<'_>,)>`

error: implementation of `FnOnce` is not general enough
  --> $DIR/issue-71955.rs:48:5
   |
LL |     foo(baz, "string", |s| s.0.len() == 5);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ implementation of `FnOnce` is not general enough
   |
   = note: closure with signature `for<'a> fn(&'a Wrapper<'0>) -> bool` must implement `FnOnce<(&Wrapper<'1>,)>`, for any two lifetimes `'0` and `'1`...
   = note: ...but it actually implements `FnOnce<(&Wrapper<'_>,)>`
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 4 previous errors

